[package]
name = "rustdrynth"
version = "1.0"
authors = "SomeArgentineCat"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"]}
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
