[package]
name = "rustdrynth"
authors = ["SomeArgentineCat"]
description = "A rust command line utility to install mods from modrinth"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"]}
dirs = "5.0.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
whoami = "1.5.1"
